[gd_scene load_steps=75 format=2]

[ext_resource path="res://data/menu/blankBackground.png" type="Texture" id=1]
[ext_resource path="res://data/sprites/player1/player1Controls.png" type="Texture" id=2]
[ext_resource path="res://data/sprites/player1/separateFrames/jumpUp.png" type="Texture" id=3]
[ext_resource path="res://data/sprites/player1/separateFrames/jumpDown.png" type="Texture" id=4]
[ext_resource path="res://data/sprites/keycaps/A.png" type="Texture" id=5]
[ext_resource path="res://data/sprites/keycaps/D.png" type="Texture" id=6]
[ext_resource path="res://data/sprites/keycaps/CAPSLK.png" type="Texture" id=7]
[ext_resource path="res://data/sprites/keycaps/`.png" type="Texture" id=8]
[ext_resource path="res://data/sprites/keycaps/S.png" type="Texture" id=9]
[ext_resource path="res://data/sprites/keycaps/TAB.png" type="Texture" id=10]
[ext_resource path="res://data/sprites/keycaps/W.png" type="Texture" id=11]
[ext_resource path="res://data/sprites/player2/player2Controls.png" type="Texture" id=12]
[ext_resource path="res://data/sprites/player2/player2.png" type="Texture" id=13]
[ext_resource path="res://data/sprites/keycaps/LEFT.png" type="Texture" id=14]
[ext_resource path="res://data/sprites/keycaps/RIGHT.png" type="Texture" id=15]
[ext_resource path="res://data/sprites/keycaps/ENTER.png" type="Texture" id=16]
[ext_resource path="res://data/sprites/keycaps/DOWN.png" type="Texture" id=17]
[ext_resource path="res://data/sprites/keycaps/SHIFT.png" type="Texture" id=18]
[ext_resource path="res://data/sprites/keycaps/CTRL.png" type="Texture" id=19]
[ext_resource path="res://data/sprites/keycaps/UP.png" type="Texture" id=20]
[ext_resource path="res://data/menu/settingsMenu/controls.png" type="Texture" id=21]
[ext_resource path="res://data/pauseMenu/exit.png" type="Texture" id=22]
[ext_resource path="res://data/pauseMenu/resume.png" type="Texture" id=23]
[ext_resource path="res://data/scenes/NewButton.tscn" type="PackedScene" id=24]
[ext_resource path="res://data/menu/ControlScreen.gd" type="Script" id=25]
[ext_resource path="res://data/audio/Menu Select.wav" type="AudioStream" id=26]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 318, 70, 106 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 70, 318, 70, 106 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 140, 318, 70, 106 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 210, 318, 70, 106 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 106, 70, 106 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 70, 106, 70, 106 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 140, 106, 70, 106 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 210, 106, 70, 106 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 424, 70, 106 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 70, 424, 70, 106 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 140, 424, 70, 106 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 210, 424, 70, 106 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 35, 53 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 35, 53 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 70, 106 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 0, 106, 70, 106 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 0, 212, 70, 106 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 0, 106, 70, 106 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 70, 106 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 12 )
region = Rect2( 0, 318, 70, 106 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 12 )
region = Rect2( 70, 318, 70, 106 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 12 )
region = Rect2( 140, 318, 70, 106 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 12 )
region = Rect2( 210, 318, 70, 106 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 12 )
region = Rect2( 0, 106, 70, 106 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 12 )
region = Rect2( 70, 106, 70, 106 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 12 )
region = Rect2( 140, 106, 70, 106 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 12 )
region = Rect2( 210, 106, 70, 106 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 12 )
region = Rect2( 0, 424, 70, 106 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 12 )
region = Rect2( 70, 424, 70, 106 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 12 )
region = Rect2( 140, 424, 70, 106 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 12 )
region = Rect2( 210, 424, 70, 106 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 13 )
region = Rect2( 0, 318, 35, 53 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 13 )
region = Rect2( 35, 318, 35, 53 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 70, 106 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 12 )
region = Rect2( 0, 106, 70, 106 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 12 )
region = Rect2( 0, 212, 70, 106 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 12 )
region = Rect2( 0, 106, 70, 106 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 70, 106 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="ControlScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 120.0
rect_min_size = Vector2( 360, 120 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Player"]
margin_right = 640.0

[node name="RUN" type="AnimatedSprite" parent="VBoxContainer/Player/HBoxContainer"]
frames = SubResource( 5 )
frame = 2
playing = true
centered = false

[node name="ATAK" type="AnimatedSprite" parent="VBoxContainer/Player/HBoxContainer"]
position = Vector2( 138.568, -1.43197 )
frames = SubResource( 10 )
playing = true
centered = false

[node name="THROW" type="AnimatedSprite" parent="VBoxContainer/Player/HBoxContainer"]
position = Vector2( 290, 0 )
frames = SubResource( 15 )
playing = true
centered = false

[node name="JUMP" type="AnimatedSprite" parent="VBoxContainer/Player/HBoxContainer"]
position = Vector2( 440, 17 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 18 )
playing = true
centered = false

[node name="TRANSITION" type="AnimatedSprite" parent="VBoxContainer/Player/HBoxContainer"]
position = Vector2( 570, 0 )
frames = SubResource( 24 )
frame = 1
playing = true
centered = false

[node name="A" type="Sprite" parent="VBoxContainer/Player/HBoxContainer"]
position = Vector2( 14.176, 100 )
texture = ExtResource( 5 )

[node name="D" type="Sprite" parent="VBoxContainer/Player/HBoxContainer"]
position = Vector2( 39.134, 100 )
texture = ExtResource( 6 )

[node name="tylda" type="Sprite" parent="VBoxContainer/Player/HBoxContainer"]
position = Vector2( 165, 100 )
texture = ExtResource( 8 )

[node name="CAPS" type="Sprite" parent="VBoxContainer/Player/HBoxContainer"]
position = Vector2( 315, 100 )
texture = ExtResource( 7 )

[node name="TAB" type="Sprite" parent="VBoxContainer/Player/HBoxContainer"]
position = Vector2( 460, 100 )
texture = ExtResource( 10 )

[node name="W" type="Sprite" parent="VBoxContainer/Player/HBoxContainer"]
position = Vector2( 586.549, 100 )
texture = ExtResource( 11 )

[node name="S" type="Sprite" parent="VBoxContainer/Player/HBoxContainer"]
position = Vector2( 610, 100 )
texture = ExtResource( 9 )

[node name="middle" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 640.0
margin_bottom = 239.0
rect_min_size = Vector2( 0, 115 )
alignment = 1

[node name="TextureRect" type="Sprite" parent="VBoxContainer/middle"]
position = Vector2( 320, 57 )
scale = Vector2( 3, 3 )
texture = ExtResource( 21 )

[node name="Enemy" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 243.0
margin_right = 640.0
margin_bottom = 363.0
rect_min_size = Vector2( 640, 120 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RUN" type="AnimatedSprite" parent="VBoxContainer/Enemy"]
frames = SubResource( 29 )
frame = 1
playing = true
centered = false

[node name="ATAK" type="AnimatedSprite" parent="VBoxContainer/Enemy"]
position = Vector2( 140, 0 )
frames = SubResource( 34 )
frame = 1
playing = true
centered = false

[node name="THROW" type="AnimatedSprite" parent="VBoxContainer/Enemy"]
position = Vector2( 290, 0 )
frames = SubResource( 39 )
frame = 1
playing = true
centered = false

[node name="JUMP" type="AnimatedSprite" parent="VBoxContainer/Enemy"]
position = Vector2( 440, 17 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 42 )
frame = 1
playing = true
centered = false

[node name="TRANSITION" type="AnimatedSprite" parent="VBoxContainer/Enemy"]
position = Vector2( 570, 0 )
frames = SubResource( 48 )
frame = 3
playing = true
centered = false

[node name="Lewo" type="Sprite" parent="VBoxContainer/Enemy"]
position = Vector2( 13.154, 100 )
texture = ExtResource( 14 )

[node name="Prawo" type="Sprite" parent="VBoxContainer/Enemy"]
position = Vector2( 38.689, 100 )
texture = ExtResource( 15 )

[node name="Gora" type="Sprite" parent="VBoxContainer/Enemy"]
position = Vector2( 580.567, 100 )
texture = ExtResource( 20 )

[node name="Dol" type="Sprite" parent="VBoxContainer/Enemy"]
position = Vector2( 606.481, 100 )
texture = ExtResource( 17 )

[node name="Enter" type="Sprite" parent="VBoxContainer/Enemy"]
position = Vector2( 162.193, 100 )
texture = ExtResource( 16 )

[node name="ShiftR" type="Sprite" parent="VBoxContainer/Enemy"]
position = Vector2( 459.373, 100 )
texture = ExtResource( 18 )

[node name="CtrlR" type="Sprite" parent="VBoxContainer/Enemy"]
position = Vector2( 311.363, 100 )
texture = ExtResource( 19 )

[node name="Back" parent="." instance=ExtResource( 24 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 530.0
margin_top = 150.0
margin_right = 590.0
margin_bottom = 210.0

[node name="TextureRect" parent="Back" index="0"]
texture = ExtResource( 23 )
flip_h = true

[node name="Exit" parent="." instance=ExtResource( 24 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 150.0
margin_right = 100.0
margin_bottom = 210.0
rect_min_size = Vector2( 60, 60 )

[node name="TextureRect" parent="Exit" index="0"]
texture = ExtResource( 22 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = -20.0
[connection signal="button_down" from="Back" to="." method="_on_Back_button_down"]
[connection signal="mouse_entered" from="Back" to="." method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="Back" to="." method="_on_Back_mouse_exited"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="button_down" from="Exit" to="." method="_on_Exit_button_down"]
[connection signal="mouse_entered" from="Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]

[editable path="Back"]

[editable path="Exit"]
